# MarketPostSync

./: .gitignore  CMakeLists.txt  Dockerfile  toolchain.cmake  vcpkg.json
.github/workflows/: client-release-windows.yml  windows-build.yml
client/: CMakeLists.txt  main.cpp
client/include/database/: Database.h
client/include/database/entity/: ProductEntity.h
client/src/: Database.cpp  main.cpp
proto/: CMakeLists.txt
proto/myproto/: product.item.proto  product.service.proto  products.upload.request.proto  response.proto
server/: CMakeLists.txt  main.cpp
server/include/database/: Database.h
server/include/database/entity/: ProductEntity.h  ProductItemEntity.h
server/include/repository/: ProductRepository.h
server/include/service/: ProductServiceImpl.h
server/src/database/: Database.cpp
server/src/repository/: ProductRepository.cpp
server/src/service/: ProductServiceImpl.cpp
